# argus-insight

./: .gitattributes  .gitignore  CLAUDE.md  README.md  argus-insight-features.md
argus-catalog-extensions/argus-catalog-metadata-sync/: CLAUDE.md  Makefile  greenplum.md  kudu.md  pyproject.toml
argus-catalog-extensions/argus-catalog-metadata-sync/config/: sync.yml
argus-catalog-extensions/argus-catalog-source-analyzer/argus-catalog-java-source-analyzer/: README.md  pyproject.toml  requirements.txt  sample-result.tsv
argus-catalog-extensions/argus-catalog-source-analyzer/argus-catalog-python-source-analyzer/: README.md  pyproject.toml  requirements.txt  sample-result.tsv
argus-catalog-extensions/argus-catalog-sqlglot-impala/: pyproject.toml
argus-catalog-extensions/argus-catalog-sqlglot-impala/tests/: test_lineage_parser.py  test_preprocessor.py
argus-catalog-sdk/: README.md  pyproject.toml
argus-catalog-sdk/src/argus_catalog_sdk/: __init__.py  cli.py  client.py
argus-insight-agent/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  start_for_dev.sh
argus-insight-agent/app/: __init__.py  main.py
argus-insight-agent/app/certmgr/: cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/command/: router.py  schemas.py  service.py
argus-insight-agent/app/core/: config.py  config_loader.py  logging.py  security.py
argus-insight-agent/app/filemgr/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/heartbeat/: scheduler.py  system_info.py
argus-insight-agent/app/hostmgr/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/metrics/: __init__.py  cli.py  collector.py  pusher.py  router.py  scheduler.py
argus-insight-agent/app/monitor/: router.py  schemas.py  service.py
argus-insight-agent/app/package/: router.py  schemas.py  service.py
argus-insight-agent/app/processmgr/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/sysmon/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/terminal/: router.py  service.py
argus-insight-agent/app/usermgr/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/app/yum/: __init__.py  cli.py  router.py  schemas.py  service.py
argus-insight-agent/packaging/config/: agent.env.example  config.properties  config.yml  server.properties
argus-insight-agent/packaging/debian/: changelog  conffiles  control  copyright  install  postinst  prerm  rules
argus-insight-agent/packaging/systemd/: argus-agent.service  argus-insight-agent.service
argus-insight-agent/scripts/: argus-agent  argus-insight-agent  argus-insight-cert  argus-insight-file  argus-insight-host  argus-insight-metric  argus-insight-process  argus-insight-sysmon  argus-insight-user  argus-insight-yum
argus-insight-agent/tests/: test_config_loader.py
argus-insight-agent/tests/test_certmgr/: test_service.py
argus-insight-agent/tests/test_command/: test_router.py
argus-insight-agent/tests/test_filemgr/: test_service.py
argus-insight-agent/tests/test_hostmgr/: test_service.py
argus-insight-agent/tests/test_metrics/: test_collector.py  test_pusher.py  test_scheduler.py
argus-insight-agent/tests/test_monitor/: test_router.py
argus-insight-agent/tests/test_processmgr/: test_service.py
argus-insight-agent/tests/test_sysmon/: __init__.py  test_service.py
argus-insight-agent/tests/test_usermgr/: test_service.py
argus-insight-agent/tests/test_yum/: __init__.py  test_service.py
argus-insight-server/: .gitignore  CLAUDE.md  Makefile  pyproject.toml  requirements.txt  start_for_dev.sh
argus-insight-server/app/: __init__.py  main.py
argus-insight-server/app/agent/: disconnect_checker.py  heartbeat_service.py  models.py  router.py  schemas.py  service.py
argus-insight-server/app/apps/: instance_router.py  models.py  registry_router.py  schemas.py  service.py
argus-insight-server/app/auth/: router.py  schemas.py  service.py
argus-insight-server/app/config/: models.py  router.py  schemas.py  service.py
argus-insight-server/app/core/: auth.py  config.py  config_loader.py  database.py  logging.py  s3.py
argus-insight-server/app/dashboard/: router.py  schemas.py  service.py
argus-insight-server/app/dns/: __init__.py  router.py  schemas.py  service.py
argus-insight-server/app/infraconfig/: service.py
argus-insight-server/app/k8s/: client.py  router.py  schemas.py  service.py
argus-insight-server/app/ml_studio/: models.py  router.py  schemas.py  service.py
argus-insight-server/app/objectfilemgr/: router.py  schemas.py  service.py
argus-insight-server/app/proxy/: router.py  schemas.py  service.py
argus-insight-server/app/resource_profile/: models.py  resource_utils.py  router.py  schemas.py  service.py
argus-insight-server/app/security/: router.py  schemas.py  service.py
argus-insight-server/app/servermgr/: router.py  schemas.py  service.py
argus-insight-server/app/settings/: router.py  schemas.py  service.py
argus-insight-server/app/sql/: __init__.py  models.py  router.py  schemas.py  service.py
argus-insight-server/app/unity_catalog/: router.py  service.py
argus-insight-server/scripts/: argus-insight-server
argus-insight-server/sql/: argus-db-schema-postgresql.sql
argus-insight-server/tests/: conftest.py
argus-insight-usersync/: CLAUDE.md  pyproject.toml  requirements.txt
argus-insight-usersync/app/: main.py
argus-insight-usersync/tests/: conftest.py  test_db_client.py  test_file_source.py  test_ranger_client.py  test_sync_engine.py
argus-insight-workspace-provisioner/: CLAUDE.md  pyproject.toml
argus-insight-workspace-provisioner/scripts/: argus-insight-provisioner-mariadb.sql  argus-insight-provisioner-postgresql.sql
argus-insight-workspace-provisioner/workspace_provisioner/: __init__.py  config.py  models.py  plugin-architecture.md  repo_injector.py  router.py  schemas.py  service.py  standalone.py  vscode.md
argus-rag-server/: CLAUDE.md  Makefile  future.md  pyproject.toml
argus-rag-server/app/: __init__.py  main.py
(+1105 files in other folders)
