[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-insight-agent"
version = "0.1.0"
description = "Argus Insight Agent - Server management agent with root privileges"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3.0",
]

[project.scripts]
argus-insight-agent = "app.main:run"
argus-insight-sysmon = "app.sysmon.cli:main"
argus-insight-yum = "app.yum.cli:main"
argus-insight-host = "app.hostmgr.cli:main"
argus-insight-user = "app.usermgr.cli:main"
argus-insight-cert = "app.certmgr.cli:main"
argus-insight-file = "app.filemgr.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
