[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-insight-server"
version = "0.1.0"
description = "Argus Insight Server - Central management server for Argus Insight platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "email-validator>=2.0",
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "python-pptx>=1.0.0",
    "mammoth>=1.6.0",
    "argus-insight-workspace-provisioner",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3.0",
]

[project.scripts]
argus-insight-server = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
