[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-insight-usersync"
version = "0.1.0"
description = "Argus Insight UserSync - Batch user/group synchronization from LDAP/Unix/File to Apache Ranger"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "httpx>=0.27",
    "python-ldap>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "respx>=0.21",
]

[project.scripts]
argus-insight-usersync = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
