[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-insight-workspace-provisioner"
version = "0.1.0"
description = "Workspace provisioning library for Argus Insight platform"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "python-gitlab>=5.0.0",
    "minio>=7.2.0",
    "cryptography>=42.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
standalone = [
    "asyncpg>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "asyncpg>=0.30.0",
    "ruff>=0.3.0",
]

[project.scripts]
provisioner-cli = "bin.provisioner_cli:main"

[tool.setuptools.packages.find]
include = ["workspace_provisioner*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
