[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-rag-server"
version = "0.1.0"
description = "Argus RAG Server - Embedding, indexing, and semantic search service"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "httpx>=0.27",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
mssql = ["pymssql>=2.2"]
all-db = ["oracledb>=2.0", "pymssql>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.scripts]
argus-rag-server = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
