[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-catalog-metadata-sync"
version = "0.1.0"
description = "Metadata synchronization service for Argus Catalog"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "hmsclient>=0.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "sqlglot>=26.0",
]

[project.optional-dependencies]
kudu = [
    "kudu-python>=1.17.0",
]
kerberos = [
    "kerberos>=1.3",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
metadata-sync = "sync.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
