[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-catalog-sqlglot-impala"
version = "0.1.0"
description = "Impala SQL dialect support for sqlglot — pre-processing and lineage parsing"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
