[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-catalog-python-source-analyzer"
version = "0.1.0"
description = "Python source code analyzer for extracting ORM/DB table mappings"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
python-source-analyzer = "python_source_analyzer.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
